Ignore .env files

--- a/.env_sample
+++ b/.env_sample
@@ -1,4 +1,7 @@
 STANFORD_NER_MODEL=
 STANFORD_NER_JAR=
-
 FREEBASE_API_KEY=
+YELP_CONSUMER_KEY=
+YELP_CONSUMER_SECRET=
+YELP_TOKEN=
+YELP_TOKEN_SECRET=
