--- a/requirements.txt
+++ b/requirements.txt
@@ -3,19 +3,23 @@ cffi==1.7.0
 click==6.6
 cryptography==1.4
 enum34==1.1.6
+future==0.15.2
 httplib2==0.9.2
 idna==2.1
 ipaddress==1.0.16
 ndg-httpsclient==0.4.2
 nltk==3.2.1
 oauth2==1.9.0.post1
+oauthlib==1.1.2
 ordereddict==1.1
 pyasn1==0.1.9
 pycparser==2.14
 pydash==3.4.3
 pyOpenSSL==16.0.0
 python-dotenv==0.5.1
+python-twitter==3.1
 requests==2.10.0
+requests-oauthlib==0.6.2
 six==1.10.0
 wikipedia==1.4.0
 yelp==1.0.2
