Twitter API done

--- a/.env_sample
+++ b/.env_sample
@@ -5,3 +5,7 @@ YELP_CONSUMER_KEY=
 YELP_CONSUMER_SECRET=
 YELP_TOKEN=
 YELP_TOKEN_SECRET=
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+TWITTER_TOKEN=
+TWITTER_TOKEN_SECRET=
